--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
     "scss-compile": "^0.1.7"
   },
   "scripts": {
@@ -20,5 +22,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
+  }
 }
